<!--
  ~ Copyright 2019 Gowtham Parimelazhagan.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">GmTheme</string>
    <string name="label_theme_picker">Theme Picker</string>

    <string name="pref_theme_title">Themes</string>
    <string name="pref_theme_summary">Select a pre-installed theme</string>

    <string name="pref_primary_color_title">Primary color</string>
    <string name="pref_primary_color_summary">Displayed most frequently across your app.</string>

    <string name="pref_accent_color_title">Accent color</string>
    <string name="pref_accent_color_summary">Accents select parts of the UI.</string>

    <string name="pref_background_color_title">Background color</string>
    <string name="pref_background_color_summary">The underlying color of the app’s content.</string>
    <string name="pref_category_appearance">Appearance</string>

    <string name="pref_colored_navigation_bar_title">Navigation bar color</string>
    <string name="pref_colored_navigation_bar_summary">Apply the primary color to the navigation bar</string>
</resources>
