<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Gowtham Parimelazhagan.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <androidx.preference.PreferenceCategory
      android:key="gm_preference_category"
      android:title="@string/pref_category_appearance">

    <androidx.preference.Preference
        android:key="pref_theme_picker"
        android:summary="@string/pref_theme_summary"
        android:title="@string/pref_theme_title"/>

    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:defaultValue="@color/gm_primary_reference"
        android:key="pref_color_primary"
        android:summary="@string/pref_primary_color_summary"
        android:title="@string/pref_primary_color_title"
        app:cpv_dialogTitle="@string/pref_primary_color_title"
        />

    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:defaultValue="@color/gm_accent_reference"
        android:key="pref_color_accent"
        android:summary="@string/pref_accent_color_summary"
        android:title="@string/pref_accent_color_title"
        app:cpv_dialogTitle="@string/pref_accent_color_title"
        />

    <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
        android:defaultValue="@color/gm_background_light"
        android:key="pref_color_background"
        android:summary="@string/pref_background_color_summary"
        android:title="@string/pref_background_color_title"
        app:cpv_colorPresets="@array/gm_background_color_presets"
        app:cpv_dialogTitle="@string/pref_background_color_title"
        app:cpv_showColorShades="false"
        tools:ignore="PrivateResource"/>

    <androidx.preference.SwitchPreferenceCompat
        android:defaultValue="@bool/should_tint_nav_bar"
        android:key="pref_color_navigation_bar"
        android:summary="@string/pref_colored_navigation_bar_summary"
        android:title="@string/pref_colored_navigation_bar_title"
        />

  </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>